--- a/src/Css/Intro.css
+++ b/src/Css/Intro.css
@@ -3,5 +3,27 @@
     display: inline-block;
     height: 100vh;
     position: absolute;
+    margin-top: 200px;
+    margin-left: 50px;
     
+}
+
+.Intro #title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 60px;
+    margin: 0;
+    font-weight: bold;
+    text-shadow: 4px 2px #21b6ae;
+    
+}
+
+.Intro #subTitle{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: large;
+    font-weight: bold;
+    color: #6D6D6D;
+}
+
+.Intro #button{
+    margin-top: 30px;
 }
