--- a/src/Css/Intro.css
+++ b/src/Css/Intro.css
@@ -2,11 +2,20 @@
     color: white;
     display: inline-block;
     height: 100vh;
+    width: 100vw;
+    margin: 0;
+    position: absolute;
+    
+    
+}
+
+.Intro #description{
     position: absolute;
     margin-top: 200px;
     margin-left: 50px;
-    
 }
+
+
 
 .Intro #title {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -26,4 +35,10 @@
 
 .Intro #button{
     margin-top: 30px;
+}
+
+.Intro #soundBtn {
+   position: absolute;
+   top: 20px;
+   right: 200px;
 }
