--- a/src/Css/Intro.css
+++ b/src/Css/Intro.css
@@ -1,3 +1,10 @@
+@media (max-width: 1500px) {
+    #arrow {
+      display: none;
+    }
+  }
+
+
 .Intro {
     color: white;
     display: inline-block;
@@ -9,9 +16,14 @@
     
 }
 
+.Intro .JetpackAnimation{
+    width: 200px;
+    height: 200px;
+}
+
 .Intro #description{
     position: absolute;
-    margin-top: 200px;
+    margin-top: 30px;
     margin-left: 50px;
 }
 
@@ -37,8 +49,54 @@
     margin-top: 30px;
 }
 
-.Intro #soundBtn {
+.Intro #music {
    position: absolute;
    top: 20px;
-   right: 200px;
+   right: 15vw;
+   background-color: #1d1d1d;
+}
+
+.Intro #music button {
+    position: absolute;
+    top: 40%;
+    margin-left: 15px;
+    padding: 0;
+    border: none;
+    background: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    font-size: large;
+    color: #21b6ae;
+}
+
+.Intro #music button::before{
+    background-color: transparent;
+}
+
+#sound_image {
+    height: 130px;
+    width: 130px;
+}
+
+#arrow {
+    position: absolute;
+    top: 21%;
+    right: 20%;
+    overflow: hidden;
+    
+}
+
+#arrow_desc{
+    color: #6D6D6D;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    float:left;
+    padding-top: 170px;
+    padding-right: 25px;
+}
+
+#arrow_image {
+    width: 110px;
+    height: 200px;
+    transform: rotate(360deg);
+    
 }
