--- a/src/Css/Projects.css
+++ b/src/Css/Projects.css
@@ -1,4 +1,6 @@
 .Projects {
-    background-color: purple;
+    background-color: #1d1d1d;
     height: 500px;
+    display: inline-block;
+    width: 100vw;
 }
