--- a/src/Css/Projects.css
+++ b/src/Css/Projects.css
@@ -17,7 +17,7 @@
     color: white;
     display: inline-block;
     float: right;
-    margin-right: 18%;
+    margin-right: 19%;
 }
 
 .Projects .Description{
@@ -33,8 +33,63 @@
     margin-right: 18%;
 }
 
-.Grid .Card{
-    box-shadow: 0 4px 8px 0 rgba(18, 121, 206, 0.2);
-  transition: 0.3s;
-  
+.Grid{
+    width: 80%;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    display: inline-block;
+    margin-top: 50px;
+    padding-top: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+    border-radius: 40px;
+    border: black 2px solid;
+  }
+
+  .flip-card-front img{
+    width: 300px;
+    height: 200px;
+    border-radius: 40px;
+    opacity: 0.8;
+  }
+  
+  .flip-card-back {
+    background-color: #F03F6A;
+    transform: rotateY(180deg);
+    border-radius: 40px;
+    color: #1d1d1d;
+    border: black 4px solid;
+  }
