--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,10 @@ body{
 }
 
 .Alert {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 50%;
   background-color: #1d1d1d;
   color: #08FDD8;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
